make sure column headers are vertically aligned

--- a/inst/css/style.css
+++ b/inst/css/style.css
@@ -134,7 +134,7 @@ tr.selected {
 
 /* Headers */
 th.method-column-header {
-  vertical-align:bottom;
+  vertical-align:bottom!important;
 }
 
 th.method-column-header-category {
